--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="name">Ad-Soyad</string>
     <string name="age">Yaş</string>
     <string name="passvalidation">Şifreyi Onayla</string>
-    <string name="forgotpass">Yenile</string>
+    <string name="forgotpass">Şifremi Yenile</string>
     <string name="title_activity_q">q</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
