--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="menu_home">Ana Sayfa</string>
+    <string name="menu_gallery">Profil</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="title_activity_main_menu">MainMenuActivity</string>
 </resources>
